--- a/skills.css
+++ b/skills.css
@@ -29,7 +29,7 @@ header {
     color: #fff;
     text-transform: uppercase;
     animation: flip 2s infinite;
-    animation-delay: calc(.2s * var(--i))
+    animation-delay: calc(.2s * var(--i));
 }
 
 @keyframes flip {
